All_Component_DX/force-app/main/default/objects/Case/fields/BW_Selected_By__c.field-meta.xml
<CustomField>
    <fullName>BW_Selected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BW Selected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_BW_Selected_By</relationshipName>
    <type>Lookup</type>
</CustomField>