All_Component_DX/force-app/main/default/objects/Case/fields/BW_Slots_Before__c.field-meta.xml
<CustomField>
    <fullName>BW_Slots_Before__c</fullName>
    <label>BW Slots Before</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>