All_Component_DX/force-app/main/default/objects/Case/fields/BW_Territory__c.field-meta.xml
<CustomField>
    <fullName>BW_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BW Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Case</relationshipName>
    <type>Lookup</type>
</CustomField>