All_Component_DX/force-app/main/default/objects/Case/fields/Component_City__c.field-meta.xml
<CustomField>
    <fullName>Component_City__c</fullName>
    <description>“City” part of the physical location address of Component SN</description>
    <formula>Component__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>“City” part of the physical location address of Component SN</inlineHelpText>
    <label>Component SN City</label>
    <type>Text</type>
</CustomField>