All_Component_DX/force-app/main/default/objects/Case/fields/Component_State__c.field-meta.xml
<CustomField>
    <fullName>Component_State__c</fullName>
    <description>“State/Province” part of the physical location address of Component SN</description>
    <formula>Component__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>“State/Province” part of the physical location address of Component SN</inlineHelpText>
    <label>Component SN State</label>
    <type>Text</type>
</CustomField>