All_Component_DX/force-app/main/default/objects/Case/fields/Component_Street__c.field-meta.xml
<CustomField>
    <fullName>Component_Street__c</fullName>
    <description>“Street” part of the physical location address of Component SN</description>
    <formula>Component__r.Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>“Street” part of the physical location address of Component SN</inlineHelpText>
    <label>Component SN Street</label>
    <type>Text</type>
</CustomField>