All_Component_DX/force-app/main/default/objects/Case/fields/Component_Zip__c.field-meta.xml
<CustomField>
    <fullName>Component_Zip__c</fullName>
    <description>“Zip/Postal Code” part of the physical location address of Component SN</description>
    <formula>Component__r.Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>“Zip/Postal Code” part of the physical location address of Component SN</inlineHelpText>
    <label>Component SN Zip</label>
    <type>Text</type>
</CustomField>