All_Component_DX/force-app/main/default/objects/Case/fields/Entitlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Type__c</fullName>
    <description>This is for internal use,  and this is set to &#39;Auto&#39; by Auto-Entitlement or set to &#39;Interactive&#39; in interactive entitlement.</description>
    <inlineHelpText>This is for internal use,  and this is set to &#39;Auto&#39; by Auto-Entitlement or set to &#39;Interactive&#39; in interactive entitlement.</inlineHelpText>
    <label>Entitlement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUTO</fullName>
            </value>
            <value>
                <fullName>INTERACTIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>