All_Component_DX/force-app/main/default/objects/Case/fields/Is_Invoice_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Invoice_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Invoice Created</label>
    <type>Checkbox</type>
</CustomField>