All_Component_DX/force-app/main/default/objects/Case/fields/Is_PM_Case__c.field-meta.xml
<CustomField>
    <fullName>Is_PM_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PM Case</label>
    <type>Checkbox</type>
</CustomField>