All_Component_DX/force-app/main/default/objects/Case/fields/Onsite_Response_Customer_By__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Response_Customer_By__c</fullName>
    <label>Onsite Response Customer By</label>
    <type>DateTime</type>
</CustomField>