All_Component_DX/force-app/main/default/objects/Case/fields/Proforma_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice_Amount__c</fullName>
    <label>Proforma Invoice Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>