All_Component_DX/force-app/main/default/objects/Case/fields/Resolution_Internal_By__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Internal_By__c</fullName>
    <description>Date/time by which customer should be resolved as per internal commitment in SLA.</description>
    <inlineHelpText>Date/time by which customer should be resolved as per internal commitment in SLA.</inlineHelpText>
    <label>Resolution Internal By</label>
    <type>DateTime</type>
</CustomField>