All_Component_DX/force-app/main/default/objects/Case/fields/Restoration_Internal_By__c.field-meta.xml
<CustomField>
    <fullName>Restoration_Internal_By__c</fullName>
    <description>Date/time by which customer should be restored as per internal commitment in SLA.</description>
    <inlineHelpText>Date/time by which customer should be restored as per internal commitment in SLA.</inlineHelpText>
    <label>Restoration Internal By</label>
    <type>DateTime</type>
</CustomField>