All_Component_DX/force-app/main/default/objects/Case/fields/SLA_Clock_Pause_Hours__c.field-meta.xml
<CustomField>
    <fullName>SLA_Clock_Pause_Hours__c</fullName>
    <label>SLA Clock Pause Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>