All_Component_DX/force-app/main/default/objects/Case/fields/SLA_Clock_Paused__c.field-meta.xml
<CustomField>
    <fullName>SLA_Clock_Paused__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA Clock Paused</label>
    <type>Checkbox</type>
</CustomField>