All_Component_DX/force-app/main/default/objects/Case/fields/SLA_Terms__c.field-meta.xml
<CustomField>
    <fullName>SLA_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service Level the customer is entitled to by this contract. Is a lookup to an existing service level record.</description>
    <inlineHelpText>Service Level the customer is entitled to by this contract. Is a lookup to an existing service level record.</inlineHelpText>
    <label>SLA Terms</label>
    <referenceTo>Service_Level__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>