All_Component_DX/force-app/main/default/objects/Case/fields/Time_to_Initial_Response__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Initial_Response__c</fullName>
    <description>Time taken to initial response as per commitment in SLA.</description>
    <inlineHelpText>Time taken to initial response as per commitment in SLA.</inlineHelpText>
    <label>Time to Initial Response (in Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>