All_Component_DX/force-app/main/default/objects/Case/fields/Top_Level__c.field-meta.xml
<CustomField>
    <fullName>Top_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Serial number of the top-level installed product to which the component belongs. Is a lookup to an existing installed product record in ServiceMax.</description>
    <inlineHelpText>Serial number of the top-level installed product to which the component belongs. Is a lookup to an existing installed product record in ServiceMax.</inlineHelpText>
    <label>Product/System</label>
    <referenceTo>Installed_Product__c</referenceTo>
    <relationshipLabel>Cases (Top-Level)</relationshipLabel>
    <relationshipName>Case2</relationshipName>
    <type>Lookup</type>
</CustomField>