All_Component_DX/force-app/main/default/objects/Case/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Warranty</description>
    <inlineHelpText>Product Warranty</inlineHelpText>
    <label>Warranty</label>
    <referenceTo>Warranty__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>